# docker-logs-transfer

./: Cargo.toml  README.md
src/: json_log.rs  main.rs
