[package]
name = "docker-logs-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "3.1.1", features = ["derive"] }
anyhow = "1.0.52"